--- a/node.js/package.json
+++ b/node.js/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/docusign/OAuth_JWT_recipes#readme",
   "dependencies": {
     "colors": "^1.1.2",
+    "commander": "^2.12.2",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
